# ghostbit

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  security.yml  tag.yml  test.yml  version.yml
src/ghostbit/: __init__.py  __main__.py  cli.py
src/ghostbit/audiostego/: __init__.py  __main__.py
src/ghostbit/audiostego/cli/: __init__.py  audiostego_cli.py
src/ghostbit/audiostego/core/: audio_multiformat_coder.py  audio_steganography.py
src/ghostbit/audiostego/skills/: __init__.py
src/ghostbit/audiostego/skills/capacity/: SKILL.md
src/ghostbit/audiostego/skills/steganography/: SKILL.md
src/ghostbit/audiostego/skills/troubleshooting/: SKILL.md
src/ghostbit/helpers/: check_audio_requirements.py  check_image_requirements.py  format_argparse.py
src/ghostbit/imagestego/: __init__.py  __main__.py
src/ghostbit/imagestego/cli/: __init__.py  imagestego_cli.py
src/ghostbit/imagestego/core/: image_multiformat_coder.py  image_statistics.py  image_steganography.py  image_steganograpy.py
src/ghostbit/imagestego/skills/: __init__.py
src/ghostbit/imagestego/skills/capacity/: SKILL.md
src/ghostbit/imagestego/skills/steganography/: SKILL.md
src/ghostbit/imagestego/skills/troubleshooting/: SKILL.md
src/ghostbit/mcp_server/: __init__.py  errors.py  prompts.py  resources.py  server.py
src/ghostbit/mcp_server/tools/: audio_tools.py  image_tools.py
src/ghostbit/videostego/: __main__.py
tests/: test_audio_multiformat_coder.py  test_audio_steganography.py  test_audiostego_cli.py  test_image_multiformat_coder.py  test_image_statistics.py  test_image_steganography.py  test_imagestego_cli.py  test_mcp_server.py  test_skills.py
tests/testcases/: test_carrier.aiff  test_carrier.flac  test_carrier.m4a  test_document.txt  test_secret.txt
